--- a/sentry.properties
+++ b/sentry.properties
@@ -1,4 +1,4 @@
 defaults.url=https://sentry.io/
-defaults.org=veative
+defaults.org=swadhinchandpatro
 defaults.project=nextJs-microfrontend
 cli.executable=node_modules/@sentry/cli/bin/sentry-cli
